Fixed 404 page typo

--- a/prism_project/templates/404.html
+++ b/prism_project/templates/404.html
@@ -5,5 +5,5 @@
     <h1>404: Page not found</h1>
     <p>The requested page does not exist. Check for a spelling mistake or email the server owner at <a href="mailto:prism+web@andrew.cmu.edu">prism+web@andrew.cmu.edu</a>.</p>
 
-    <p class=" class="btn btn-eBlue""><a href="{% url 'home' %}">Return home</a></p>
+    <p class="btn btn-eBlue"><a href="{% url 'home' %}">Return home</a></p>
 {% endblock 'page-content' %}
