Rework on user login, logout, signup, detail editing, and password edits

--- a/prism_project/templates/users/profile.html
+++ b/prism_project/templates/users/profile.html
@@ -15,7 +15,7 @@
     {% endif %}
 
         <p>
-            <a href="#">Edit user details</a><br>
+            <a href="{% url 'edit_user' %}">Edit user details</a><br>
             <a href="{% url 'logout' %}">Logout</a><br>
         </p>
 
