--- a/prism_project/templates/registration/logged_out.html
+++ b/prism_project/templates/registration/logged_out.html
@@ -1,12 +1,12 @@
-{% extends "admin/base_site.html" %}
+{% extends 'registration/registration-base.html' %}
 {% load i18n %}
 
-{% block breadcrumbs %}<div class="breadcrumbs"><a href="{% url 'admin:index' %}">{% trans 'Home' %}</a></div>{% endblock %}
+{% block title %}Logged Out{% endblock title %}
 
-{% block content %}
+{% block 'page-content' %}
 
-<p>{% trans "Thanks for spending some quality time with the Web site today." %}</p>
+<p>{% trans "Thanks for visiting." %}</p>
 
-<p><a href="{% url 'admin:index' %}">{% trans 'Log in again' %}</a></p>
+<p><a href="{% url 'login' %}">{% trans 'Log in again' %}</a></p>
 
-{% endblock %}
+{% endblock 'page-content' %}
