--- a/prism_project/templates/registration/login.html
+++ b/prism_project/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends "users/users-base.html" %}
+{% extends 'registration/registration-base.html' %}
 
 {% block title %}Login{% endblock title %}
 
