Changed wording on homepage

--- a/prism_project/templates/core/index.html
+++ b/prism_project/templates/core/index.html
@@ -13,7 +13,7 @@
                 <p>
                     PRISM is a social and activist organization at Carnegie Mellon University for those of all genders and orientations. We provide a safe space for anyone with an open mind to find new friends, talk about issues, raise awareness, and relax between classes.
                 </p><p>
-                    Check the calendar below for our upcoming events and initiatives! Or take a look at our support groups if you are interested in joining a support group.
+                    Check the calendar below for our upcoming events and initiatives! Or take a look at our affinity groups if you are interested in joining a social and or support group.
                 </p>
             </div> <!-- End welcome -->
 
@@ -30,6 +30,7 @@
         <!-- Hide sidenav on medium or smaller screens -->
         <div class="col-md-4">
             <div id="index-img" class="d-none d-md-block"></div>
+            <!-- Door status block -->
             {% if door.get_status  == "open" %}
                 <div class="door-status-indicator open">
                     <p>PRISM is located in 'SoHo', room 335 of the Cohen University Center. Come stop on by!</p>
